# LWDirectoryScanner

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.rst  conanfile.txt  requirements.txt
docs/: C_compilation_process.rst  LWDirectoryScanner.logo.printer.sh  LWDirectoryScanner.logo.txt  cbor-deserializer-usage.asciidoc
src/: CBORDeserializer.py  CBOR_Deserializer.py  deserializer.py  main.c  scanner_helpers.c  scanner_helpers.h
src/test_deserializer/: test_suite.py
src/test_deserializer/CBOR_test_files/: 0_summary.cbor  b_summary.cbor  c_summary.cbor  e_summary.cbor  test.cbor  test_dirs_summary.cbor
tests/: test_suite.c
